--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 asn1crypto==0.23.0
 attrs==17.2.0
 Automat==0.6.0
+bcrypt==3.1.4
 blinker==1.3
 certifi==2017.7.27.1
 cffi==1.11.0
 chardet==3.0.4
 click==6.7
 constantly==15.1.0
+coverage==4.0.3
 cryptography==2.0.3
 cssselect==1.0.1
 enum34==1.1.6
+Faker==0.8.4
 Flask==0.10.1
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.0
@@ -29,9 +32,13 @@ pyasn1-modules==0.1.4
 pycparser==2.18
 PyDispatcher==2.0.5
 pyOpenSSL==17.3.0
+python-coveralls==2.9.1
+python-dateutil==2.6.1
+PyYAML==3.12
 queuelib==1.4.2
 requests==2.18.4
 Scrapy==1.4.0
+selenium==3.6.0
 service-identity==17.0.0
 six==1.11.0
 SQLAlchemy==1.0.3
